--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,14 +3,17 @@
 
     <item
         android:id="@+id/search"
+        android:icon="@drawable/ic_search_white_24dp"
         android:title="@string/search"/>
 
     <item
         android:id="@+id/my_stops"
+        android:icon="@drawable/ic_star_white_24dp"
         android:title="@string/my_stops"/>
 
     <item
         android:id="@+id/routes"
+        android:icon="@drawable/ic_directions_bus_white_24dp"
         android:title="@string/routes"/>
 
 </menu>
